--- a/src/lab3/params.properties
+++ b/src/lab3/params.properties
@@ -7,3 +7,5 @@
 Количество_функциональных_точек=950
 V_коэффициент_внешней_среды=42
 Ставка_программиста(руб)=19500
+Отношение_ставки_программиста_к_системному_аналитику=0.769230769230769
+Отношение_ставки_программиста_к_техническому_специалисту=1.428571428571429
