lab 4 no done yet

--- a/src/lab4/params.properties
+++ b/src/lab4/params.properties
@@ -2,5 +2,5 @@
 срок_месяцев=10
 процент_банковского_кредита=0.17
 заданный_обьем_рынка_продаж=30.0
-дополнительная_прибыль(тыс_руб)=55000.0
+дополнительная_прибыль=55000.0
 зарплата_специалистов_отдела_маркетинга_проценты=0.45
